Use new WriteFeaturesEvent in FeatureApi dependent by static flag
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>